# For more information about using CMake with Android Studio, read the
# documentation: https://d.android.com/studio/projects/add-native-code.html.
# For more examples on how to use CMake, see https://github.com/android/ndk-samples.

# Sets the minimum CMake version required for this project.
cmake_minimum_required(VERSION 3.22.1)

# Declares the project name. The project name can be accessed via ${ PROJECT_NAME},
# Since this is the top level CMakeLists.txt, the project name is also accessible
# with ${CMAKE_PROJECT_NAME} (both CMake variables are in-sync within the top level
# build script scope).
project("helloworld")


# Creates and names a library, sets it as either STATIC
# or SHARED, and provides the relative paths to its source code.
# You can define multiple libraries, and CMake builds them for you.
# Gradle automatically packages shared libraries with your APK.
#
# In this top level CMakeLists.txt, ${CMAKE_PROJECT_NAME} is used to define
# the target library name; in the sub-module's CMakeLists.txt, ${PROJECT_NAME}
# is preferred for the same purpose.
#
# In order to load a library into your app from Java/Kotlin, you must call
# System.loadLibrary() and pass the name of the library defined here;
# for GameActivity/NativeActivity derived applications, the same library name must be
# used in the AndroidManifest.xml file.
add_library(${CMAKE_PROJECT_NAME} SHARED
        # List C/C++ source files with relative paths to this CMakeLists.txt.
        native-lib.cpp)


#HCppBox不链接外部库
set(HCPPBOX_USE_PURE_CPLUSPLUS TRUE)

#设定HRC文件系统目录为fs
set(HRC_FS_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/fs/)


# 添加HCppBox
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../../../../../../ HCppBox EXCLUDE_FROM_ALL)


#启用HCppBox
hcppbox_enable(${PROJECT_NAME})

#启用Hrc
hrc_enable(${PROJECT_NAME})

# Specifies libraries CMake should link to your target library. You
# can link libraries from various origins, such as libraries defined in this
# build script, prebuilt third-party libraries, or Android system libraries.
target_link_libraries(${CMAKE_PROJECT_NAME}
        # List libraries link to the target library
        android
        log
        dl)

# Android NDK 会保留.so结尾的文件并打包到lib目录，可执行文件也打包到此目录
set(CMAKE_EXECUTABLE_SUFFIX  ".so")

#添加一个libexec_hellorworld.so作为可执行文件
add_executable(libexec_helloworld libexec_helloworld.cpp)
hcppbox_enable(libexec_helloworld)
hrc_enable(libexec_helloworld)
target_link_libraries(libexec_helloworld android log dl)
